--- a/007_LangchainChatbot_FAQ.ipynb
+++ b/007_LangchainChatbot_FAQ.ipynb
@@ -226,8 +226,8 @@
       "cell_type": "code",
       "source": [
         "import os\n",
-        "#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\n",
-        "os.environ[\"OPENAI_API_KEY\"] = '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'"
+      
+        "os.environ[\"OPENAI_API_KEY\"] = ''
       ],
       "metadata": {
         "id": "Antg-PUr7Jsr"
